# chat-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  error_handlers.py
app/api/routes/: health.py  messages.py
app/core/: config.py  exceptions.py  logging.py  rate_limit.py
app/models/: base.py  fts.py  message.py  types.py
app/repositories/: base.py  sqlite_repository.py
app/schemas/: common.py  message.py
app/services/: message_service.py
app/services/pipeline/: __init__.py  base.py  content_filter.py  metadata_enricher.py
docs/adr/: 0001-framework-and-architecture.md  0002-dependency-architecture.md  0003-processing-pipeline.md  0004-persistence.md  0005-error-handling.md  0006-authentication.md  0007-full-text-search.md  0008-rate-limiting.md
infra/: README.md  main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration/: test_authentication.py  test_dependencies.py  test_error_handling.py  test_health.py  test_messages_api.py  test_rate_limiting.py  test_search_api.py
tests/unit/: test_content_filter.py  test_message_service.py  test_metadata_enricher.py  test_sqlite_repository.py  test_utc_datetime.py
