[project]
name = "chat-api"
version = "0.1.0"
description = "RESTful API for chat message processing"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # [E] Errores de estilo (pycodestyle - PEP 8)
    "W",   # [W] Advertencias de estilo (pycodestyle - PEP 8)
    "F",   # [F] Pyflakes - Errores de Flake8 (importaciones, nombres)
    "I",   # [I] Orden de imports (isort)
    "B",   # [B] Errores de bugbear (bugbear - posibles bugs)
    "UP",  # [UP] Mejoras de Python - Sintaxis obsoleta que ya tiene forma moderna (pyupgrade)
    "N",   # [N] Convenciones de nombres (pep8-naming)
    "SIM", # [SIM] Simplificaciones de código
    "C4",  # [C4] Comprobaciones de comprehensions
]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    # Starlette's TestClient emits this at import time via its httpx
    # dependency; it's internal to the framework and outside our control.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
markers = [
    "unit: fast, isolated tests",
    "integration: tests exercising the full API stack",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]